About: A tool for making hypothetical tropical cyclone tracks (WIP)

v20220205a:
    + Added GUI
        > for changing category
        > for changing dot type
        > for deselecting tracks
        > for single track mode
v20220131a:
    + Added grey color for unknown strength cyclones
        > Press "u" to select
    * Better sizes for subtropical squares, extratropical triangles, and track line
    % Credit to Reno-Rex (a.k.a. Hypercane) for this update
v20220130a:
    + Added mode for viewing a single track
        > Press "h" with a track selected to enter this mode and hide all other tracks
        > Disabled by pressing "h" again or by deselecting track
    * Selected track and hovered tracks now highlighted
        > Highlight disabled in single track view mode
    * Tracks can now be deselected by pressing space
        > New tracks now created by clicking anywhere without any tracks selected
        > Control-click no longer does anything special
    - Removed white bar with "TEST" from the map viewer
v20210111a:
    * Map can now be panned beyond the International Date Line (allowing for crossover tracks)
    * Better map resolution when fully zoomed in
v20200418a:
    + Support for multiple tracks added
        > Control-click to begin a new track
        > New points added to the end of the selected track
        > Move or delete a point from a track to select it
    + Subtropical and extratropical points added
        > Press "t" to select tropical (circle) for new points
        > Press "b" to select subtropical (square)
        > Press "x" to select extratropical (triangle)
v20200417a:
    + Added the ability to place, move, and delete track points
        > Press "d", "s", "1", "2", "3", "4", or "5" to select track point color
        > Click anywhere to place a new track point
        > Click and drag an existing point to move it
        > Shift-click a point to delete it
        > Currently only supports a single storm's track
v20200405a: